Get basically working, including https and exposing via public tunnel using ngrok

--- a/samples/aspnetcore/Views/Connections/Details.cshtml
+++ b/samples/aspnetcore/Views/Connections/Details.cshtml
@@ -1,6 +1,7 @@
 ﻿@using WebAgent.Protocols
 @using WebAgent.Protocols.BasicMessage
 @using WebAgent.Utils
+@using MessageDirection = WebAgent.Protocols.BasicMessage.MessageDirection
 @model ConnectionDetailsViewModel
 
 <div class="row mt-2">
