--- a/samples/xamarin-forms/AFMobileSample/MainPage.xaml
+++ b/samples/xamarin-forms/AFMobileSample/MainPage.xaml
@@ -1,5 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
-<ContentPage xmlns="http://xamarin.com/schemas/2014/forms" x:Name="xMyForm" BindingContext="{x:Reference Name=xMyForm}" xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml" xmlns:local="clr-namespace:AFMobileSample" x:Class="AFMobileSample.MainPage">
+<ContentPage xmlns="http://xamarin.com/schemas/2014/forms"
+             x:Name="xMyForm" BindingContext="{x:Reference Name=xMyForm}"
+             xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
+             xmlns:local="clr-namespace:AFMobileSample"
+             x:Class="AFMobileSample.MainPage">
     <FlexLayout Direction="Column"
                 AlignItems="Center"
                 JustifyContent="SpaceEvenly">
